--- a/_includes/about/timeline.html
+++ b/_includes/about/timeline.html
@@ -4,6 +4,7 @@
       <div class="timeline-item">
         <div class="content">
           <h2>{{ item.title }}</h2>
+          <h5 style="font-size:80%">{{ item.location }}</h5>
           <h6 class="date">{{ item.from }} — {{ item.to }}</h6>
           <p>{{ item.summary }}</p>
           <p>
