--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -5,6 +5,7 @@
     <link href="{{ '/assets/dflip/css/dflip.min.css' | relative_url }}" rel="stylesheet" type="text/css">
     <link href="{{ '/assets/dflip/css/themify-icons.min.css' | relative_url }}" rel="stylesheet" type="text/css">
 
+    <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}">
     <script src="{{ '/assets/dflip/js/libs/jquery.min.js' | relative_url }}"></script>
     <script src="{{ '/assets/dflip/js/dflip.min.js' | relative_url }}"></script>
 
