--- a/_includes/elements/carousel.html
+++ b/_includes/elements/carousel.html
@@ -12,15 +12,36 @@
     {% endfor %}
   </ol>
 
+  {% assign ext = file_name | slice: -3, 3 | downcase %}
+  {% if ext == 'mp4' %}
+  {% else %}
+    <img src="{{ image }}" class="d-block w-100">
+  {% endif %}
+
+
+
   <div class="carousel-inner">
     {% for image in images %}
+      {% assign ext = image | split: "." | last %}
       {%- if forloop.first -%}
         <div class="carousel-item active">
-          <img src="{{ image }}" class="d-block w-100">
+          {% if ext == 'mp4' or ext == 'webm' %}
+          <video width="100%" preload="auto" muted loop autoplay>
+            <source src="{{ image }}" type="video/mp4">
+          </video>
+          {% else %}
+            <img src="{{ image }}" class="d-block w-100">
+          {% endif %}
         </div>
       {%- else -%}
         <div class="carousel-item">
-          <img src="{{ image }}" class="d-block w-100">
+          {% if ext == 'mp4' or ext == 'webm' %}
+          <video width="100%" preload="auto" muted loop autoplay>
+            <source src="{{ image }}" type="video/mp4">
+          </video>
+          {% else %}
+            <img src="{{ image }}" class="d-block w-100">
+          {% endif %}
         </div>
       {%- endif -%}
     {% endfor %}
