--- a/_includes/elements/carousel.html
+++ b/_includes/elements/carousel.html
@@ -18,18 +18,13 @@
     <img src="{{ image }}" class="d-block w-100">
   {% endif %}
 
-
-
   <div class="carousel-inner">
     {% for image in images %}
       {% assign ext = image | split: "." | last %}
       {%- if forloop.first -%}
         <div class="carousel-item active">
           {% if ext == 'mp4' or ext == 'webm' %}
-          <!-- <video width="100%" preload="auto" muted loop autoplay> -->
-          <video width="100%" autoplay muted playsinline loop preload="auto">
-            <source src="{{ image }}" type="video/mp4">
-          </video>
+            <video width="100%" autoplay muted playsinline loop preload="auto"> <source src="{{ image }}" type="video/mp4"> </video>
           {% else %}
             <img src="{{ image }}" class="d-block w-100">
           {% endif %}
@@ -37,10 +32,7 @@
       {%- else -%}
         <div class="carousel-item">
           {% if ext == 'mp4' or ext == 'webm' %}
-          <!-- <video width="100%" preload="auto" muted loop autoplay> -->
-          <video width="100%" autoplay muted playsinline loop preload="auto">
-            <source src="{{ image }}" type="video/mp4">
-          </video>
+            <video width="100%" autoplay muted playsinline loop preload="auto"> <source src="{{ image }}" type="video/mp4"> </video>
           {% else %}
             <img src="{{ image }}" class="d-block w-100">
           {% endif %}
