--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -18,70 +18,7 @@
 
     <script>
       var option_button_pdf = {
-        // source: [
-        //   "/assets/portfolio/pages/page-0.avif",
-        //   "/assets/portfolio/pages/page-1.avif",
-        //   "/assets/portfolio/pages/page-2.avif",
-        //   "/assets/portfolio/pages/page-3.avif",
-        //   "/assets/portfolio/pages/page-4.avif",
-        //   "/assets/portfolio/pages/page-5.avif",
-        //   "/assets/portfolio/pages/page-6.avif",
-        //   "/assets/portfolio/pages/page-7.avif",
-        //   "/assets/portfolio/pages/page-8.avif",
-        //   "/assets/portfolio/pages/page-9.avif",
-        //   "/assets/portfolio/pages/page-10.avif",
-        //   "/assets/portfolio/pages/page-11.avif",
-        //   "/assets/portfolio/pages/page-12.avif",
-        //   "/assets/portfolio/pages/page-13.avif",
-        //   "/assets/portfolio/pages/page-14.avif",
-        //   "/assets/portfolio/pages/page-15.avif",
-        //   "/assets/portfolio/pages/page-16.avif",
-        //   "/assets/portfolio/pages/page-17.avif",
-        //   "/assets/portfolio/pages/page-18.avif",
-        //   "/assets/portfolio/pages/page-19.avif",
-        //   "/assets/portfolio/pages/page-20.avif",
-        //   "/assets/portfolio/pages/page-21.avif",
-        //   "/assets/portfolio/pages/page-22.avif",
-        //   "/assets/portfolio/pages/page-23.avif",
-        //   "/assets/portfolio/pages/page-24.avif",
-        //   "/assets/portfolio/pages/page-25.avif",
-        //   "/assets/portfolio/pages/page-26.avif",
-        //   "/assets/portfolio/pages/page-27.avif",
-        //   "/assets/portfolio/pages/page-28.avif",
-        //   "/assets/portfolio/pages/page-29.avif",
-        // ],
-        source: [
-          "/assets/portfolio/pages/page-0.webp",
-          "/assets/portfolio/pages/page-1.webp",
-          "/assets/portfolio/pages/page-2.webp",
-          "/assets/portfolio/pages/page-3.webp",
-          "/assets/portfolio/pages/page-4.webp",
-          "/assets/portfolio/pages/page-5.webp",
-          "/assets/portfolio/pages/page-6.webp",
-          "/assets/portfolio/pages/page-7.webp",
-          "/assets/portfolio/pages/page-8.webp",
-          "/assets/portfolio/pages/page-9.webp",
-          "/assets/portfolio/pages/page-10.webp",
-          "/assets/portfolio/pages/page-11.webp",
-          "/assets/portfolio/pages/page-12.webp",
-          "/assets/portfolio/pages/page-13.webp",
-          "/assets/portfolio/pages/page-14.webp",
-          "/assets/portfolio/pages/page-15.webp",
-          "/assets/portfolio/pages/page-16.webp",
-          "/assets/portfolio/pages/page-17.webp",
-          "/assets/portfolio/pages/page-18.webp",
-          "/assets/portfolio/pages/page-19.webp",
-          "/assets/portfolio/pages/page-20.webp",
-          "/assets/portfolio/pages/page-21.webp",
-          "/assets/portfolio/pages/page-22.webp",
-          "/assets/portfolio/pages/page-23.webp",
-          "/assets/portfolio/pages/page-24.webp",
-          "/assets/portfolio/pages/page-25.webp",
-          "/assets/portfolio/pages/page-26.webp",
-          "/assets/portfolio/pages/page-27.webp",
-          "/assets/portfolio/pages/page-28.webp",
-          "/assets/portfolio/pages/page-29.webp",
-        ],
+        source: Array.from({ length: 30 }, (_, i) => `/assets/portfolio/pages/page-${i}.webp`),
         webgl:true,
         webglShadow: true,
         shadowOpacity: 0.2,
@@ -96,24 +33,6 @@
         allControls: "startPage,altPrev,pageNumber,altNext,zoomIn,zoomOut,pageMode,fullScreen",
       };
     </script>
-
-    <!-- <script>
-      var option_button_pdf = {
-          // source:'assets/portfolio/portfolio.pdf',
-          webgl:true,
-          webglShadow: true,
-          shadowOpacity: 0.2,
-          soundEnable: false,
-          pageMode: DFLIP.PAGE_MODE.DOUBLE,
-          singlePageMode: DFLIP.SINGLE_PAGE_MODE.AUTO,
-          zoomRatio: 1.5,
-          stiffness: 0,
-          backgroundColor: "#b8a8cbcc",
-          transparent: true,
-          hard: "cover",
-          allControls: "startPage,altPrev,pageNumber,altNext,zoomIn,zoomOut,pageMode,fullScreen",
-      };
-    </script> -->
 
     <p class="text-muted wow animated slideInUp" data-wow-delay=".15s">{{ site.description }}</p>
 
